<resources>
    <string name="app_name">Cubos Movies App</string>
    <string name="action">Ação</string>
    <string name="drama">Drama</string>
    <string name="fantasy">Fantasia</string>
    <string name="science_fiction">Ficção</string>
    <string name="movies">Movies</string>
    <string name="search_hint">Buscar filme…</string>
    <string name="share">Compartilhar</string>
    <string name="share_msg">Compartilhar filme</string>
    <string name="msg_empty_state">Infelizmente a sua pesquisa não retornou nenhum registro.</string>
    <string name="msg_error">Houve um erro, tente novamente mais tarde</string>
</resources>
